src/component/loading_list/tests/snapshots/envision__component__loading_list__tests__component__view_with_items.snap
---
source: src/component/loading_list/tests/component.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│    Item One                                              │
│▸   Item Two                                              │
│    Item Three                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
